2008-09-30 Frank Naegler  <typo3@naegler.net>

	* adding GroupInformationWidget

2008-09-29 Ingo Renner  <ingo@typo3.org>

	* !!! changed the way the configuration for community applications is build, their names now start with lower case letters like anything else, too
	* made the profile image rendering configurable through TS
	* The application manager now returns initialized applications
	* added a dispatching mechanism to the abstract community application controller, it executes in the following priorities: widget, specific action, default action
	* renamed the widgets' getId() method into getName() to make it more consistent with the according community application method
	* refactored the existing user profile widgets to use a new abstract community application widget class as parent

2008-09-29 Frank Naegler  <typo3@naegler.net>

	* move function isFriendOfCurrentlyLoggedInUser from tx_community_model_UserGateway to tx_community_AccessManager

2008-09-22 Frank Naegler  <typo3@naegler.net>

	* added member invite function for group editing settings
	* added new function isFriendOfCurrentlyLoggedInUser to the tx_community_model_UserGateway
	* bugfix: initialize groupGateway in tx_community_controller_ListGroupsApplication

2008-09-21 Ingo Renner  <ingo@typo3.org>

	* added a way to exclude community application from being listed in the community plugin's flexform
	* made the application manager available in global scope when the community plugin is executed
	* removed includes of the application manager as it is loaded with the community FE plugin
	* changed existing community applications to use the global instance of the application manager
	* !!! changed API of addLoop() in the template engine, now requires a marker name as second parameter for the looped variable
	* !!! renamed method in template engine, getMarkersFromSupart() is now named getMarkersFromTemplate()
	* added a new community application (UserList) to list users