@@ -1,3 +1,7 @@
+2008-09-30 Ingo Renner  <ingo@typo3.org>
+
+	* Fixed profile action links in the profile actions widget
+
 2008-09-30 Frank Naegler  <typo3@naegler.net>
 
 	* adding GroupInformationWidget
@@ -10,6 +14,7 @@
 	* added a dispatching mechanism to the abstract community application controller, it executes in the following priorities: widget, specific action, default action
 	* renamed the widgets' getId() method into getName() to make it more consistent with the according community application method
 	* refactored the existing user profile widgets to use a new abstract community application widget class as parent
+	* added basic scaffolding for the friends birthdaylist widget
 
 2008-09-29 Frank Naegler  <typo3@naegler.net>
 
